# movies-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d5ae2a957ca_.py
backend/movies_api/: __init__.py  main.py  settings.py
backend/schemas/: index.py  titles.py
